--- a/config_example.ini
+++ b/config_example.ini
@@ -1,18 +1,21 @@
 [DEFAULT]
 port = 5000
 host = ::1
-debug = true
+debug = false
+live_scrape = false
 database_host = 127.0.0.1
 database_port = 5432
 database_name = park_api
 database_user =
 database_password =
-live_scrape = true
 
 [development]
+debug = true
+live_scrape = true
 
 [testing]
 
+[staging]
+
 [production]
-debug = false
-live_scrape = false
+host = ::
